--- a/.hyperlane/chains/anvil8545/metadata.yaml
+++ b/.hyperlane/chains/anvil8545/metadata.yaml
@@ -12,3 +12,8 @@ blocks:
 transactionOverrides:
   maxFeePerGas: 1000000000
   maxPriorityFeePerGas: 1000000000
+nativeToken:
+  name: ETH
+  symbol: ETH
+  decimals: 18
+
