--- a/.hyperlane/chains/anvil8546/metadata.yaml
+++ b/.hyperlane/chains/anvil8546/metadata.yaml
@@ -12,3 +12,7 @@ blocks:
 transactionOverrides:
   maxFeePerGas: 1000000000
   maxPriorityFeePerGas: 1000000000
+nativeToken:
+  name: ETH
+  symbol: ETH
+  decimals: 18
